--- a/exhibition.html
+++ b/exhibition.html
@@ -194,21 +194,20 @@
                 <p class="exhibition-year">2020</p>
 
                 <div class="exhibitions">
-                    <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe">nigeria
-                            trending,<br>
-                            lagos fringe</a> </p>
-
-                    <p class="exhibition-venue">freedom park kongi`s harvest gallery,</p>
-
-                    <p class="exhibition-venue">lagos,nigeria.</p>
-
+                    <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe">
+                            nigeria trending, <br> lagos fringe</a>
+                    </p>
+                    <p class="exhibition-venue">freedom park, <br> kongi`s harvest gallery,</p>
+                    <p class="exhibition-location">lagos,nigeria.</p>
                     <hr color="#800020">
                 </div>
+                
 
                 <div class="exhibitions">
                     <p class="exhibition-title"><a href="./exhibitions/pain:a-discomfort-or-a-trigger">pain: a
-                            discomfort or a
-                            trigger</a></p>
+                            discomfort or <br> a
+                            trigger</a>
+                    </p>
                     <p class="exhibition-venue">virtual exhibition,</p>
                     <a class="exhibition-location link" target="_blank" rel="noreferrer"
                         href="https://thepeaceexhibit.com/">thepeaceexhibit.com</a>
