--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 
         tl.from(".landing-page img", { x: -200, opacity: 0.5, duration: 1.5 })
             .from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
+            .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
             .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
             .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
           
