--- a/projects/christmasandclothes.html
+++ b/projects/christmasandclothes.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="minify.css"> 
 -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
@@ -309,7 +310,7 @@
                 scrub: 1
             },
             stagger: { amount: 0.5 },
-            scale: 0.8,
+            scale: 0.99,
             duration: 1,
             ease: "power1.inOut"
         });
