--- a/projects/theanotherbeginning.html
+++ b/projects/theanotherbeginning.html
@@ -37,6 +37,7 @@
         <link rel="stylesheet" href="minify.css"> 
     -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
