--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="minify.css"> 
 -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
