--- a/projects/toiletintoiletout.html
+++ b/projects/toiletintoiletout.html
@@ -39,6 +39,7 @@
         <link rel="stylesheet" href="minify.css"> 
     -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 </head>
 
