--- a/video/3.html
+++ b/video/3.html
@@ -8,7 +8,7 @@
     <title> wa na wari | neec nonso | visual artist</title>
 
 <!-- Favicon -->
-<link rel="shortcut icon" type="image/png" href="images/favicon.png">
+<link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
 <meta name="robots" content="index, follow">
 <meta name="description" content="neec nonso is a nigerian visual artist">
@@ -137,7 +137,7 @@
         </div>
 
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            <iframe rel="preload" src="https://www.youtube.com/embed/tgbNymZ7vqY">
             </iframe>
         </div>
 
@@ -183,7 +183,7 @@
     </script>
 
 
-    <script src="script.js" async defer></script>
+    <script src="../script.js" async defer></script>
 
 </body>
 
