--- a/exhibition.html
+++ b/exhibition.html
@@ -117,7 +117,7 @@
 
     <!-- Start of Exhibition -->
 
-    <main class="exhibition-container">
+    <main class="exhibition-main-container">
 
         <div class="exhibitions-info">
 
@@ -265,51 +265,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
-
-        gsap.from(".extra", {
-            scrollTrigger: {
-                trigger: ".exhibitions-info",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.8,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-        gsap.from(".footer-container", {
-            scrollTrigger: {
-                trigger: ".exhibitions-info",
-                start: "middle middle",// when the top of the trigger hits the top of the viewport
-                end: "+=700", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.8,
-            duration: 1,
-
-        });
-
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: ".extra",
-
-                //   markers: true,
-
-            }
-        });
-        tl.from(".extra", { x: 200, opacity: 0, duration: 1.5 })
-            .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-            .from(".fromleft", { x: -200, opacity: 0, duration: 1.5 })
-            .from(".fromright", { x: 200, opacity: 0, duration: 1.5 })
-
-    </script>
+   
 
     <script src="script.js" async defer></script>
+    <script src="gsap.js"></script>
 
 </body>
 
