--- a/exhibitions/nigeria-trending-lagos-fringe.html
+++ b/exhibitions/nigeria-trending-lagos-fringe.html
@@ -113,6 +113,8 @@
 
     <!-- End of Navbar-->
 
+        <main class="exhibition-main-container">
+
     <div class="items-container">
 
         <section class="exhibition-intro">
@@ -142,6 +144,8 @@
 
     </div>
 
+    </main>
+
     <!-- Start of Footer -->
 
     <footer class="footer-container">
@@ -166,6 +170,7 @@
 
 
     <script src="../script.js" async defer></script>
+    <script src="../gsap.js"></script>
 
 </body>
 
