--- a/exhibitions/no-victor-no-vanquished:theworldatthecrossroads.html
+++ b/exhibitions/no-victor-no-vanquished:theworldatthecrossroads.html
@@ -113,7 +113,33 @@
     </div>
 
     <!-- End of Navbar-->
+<main class="exhibition-main-container">
 
+    <div class="items-container">
+
+        <section class="exhibition-intro">
+
+            <p class="exhibition-title"><a href="./exhibitions/no-victor-no-vanquished:theworldatthecrossroads">
+                    no
+                    victor,no vanquished:<br>
+                    the world at the crossroads.</a></p>
+            <p class="exhibition-venue">iwaya community art biennale,</p>
+            <p class="exhibition-location">lagos,nigeria</p>
+        </section>
+
+    
+
+        <section class="child-images">
+            <img src="../exhibition/no victor/3.jpg" alt="no-victor-no-vanquished">
+            <img src="../exhibition/no victor/4.jpg" alt="no-victor-no-vanquished">
+            <img src="../exhibition/no victor/5.jpg" alt="no-victor-no-vanquished">
+           
+
+        </section>
+
+    </div>
+
+</main>
 
 
     <!-- Start of Footer -->
@@ -140,6 +166,7 @@
 
 
 <script src="../script.js" async defer></script>
+<script src="../gsap.js"></script>
 
 </body>
 
