--- a/exhibitions/youngcontemporaries.html
+++ b/exhibitions/youngcontemporaries.html
@@ -40,7 +40,7 @@
     -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mobile.css">
-    <link rel="stylesheet" href="../css/try.css">
+
 
 
 </head>
@@ -119,43 +119,44 @@
     <!-- End of Navbar-->
 
     <!-- Exhibitions -->
+    <main class="exhibition-main-container">
 
-    <div class="items-container">
+        <div class="items-container">
 
-        <section class="exhibition-intro">
+            <section class="exhibition-intro">
 
-            <p class="exhibition-title">
-                <a href="./exhibitions/youngcontemporaries">
-                    young contemporaries.
-                </a>
-            </p>
-            <p class="exhibition-venue">rele arts foundation </p>
-            <p class="exhibition-location">lagos,nigeria</p>
-        </section>
+                <p class="exhibition-title">
+                    <a href="./exhibitions/youngcontemporaries">
+                        young contemporaries.
+                    </a>
+                </p>
+                <p class="exhibition-venue">rele arts foundation </p>
+                <p class="exhibition-location">lagos,nigeria</p>
+            </section>
 
-        <section>
-            <img class="slider-image" name="slide" />
-        </section>
+            <section>
+                <img class="slider-image" name="slide" />
+            </section>
 
-        <section class="child-images">
-            <img src="../exhibition/young contemporaries/2.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/3.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/4.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/5.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/6.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/7.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/8.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/9.webp" alt="young contemporaries">
-            <img src="../exhibition/young contemporaries/10.webp" alt="young contemporaries">
-         
-        </section>
+            <section class="child-images">
+                
+                <img src="../exhibition/young contemporaries/2.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/3.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/4.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/5.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/6.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/7.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/8.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/9.webp" alt="young contemporaries">
+                <img src="../exhibition/young contemporaries/10.webp" alt="young contemporaries">
 
-    </div>
+            </section>
+
+        </div>
+
+    </main>
 
     <!-- End of Exhibition-->
-
-
-
 
     <!-- Start of Footer -->
 
@@ -180,6 +181,7 @@
 
 
     <script src="../script.js" async defer></script>
+    <script src="../gsap.js"></script>
 
 </body>
 
