--- a/exhibition.html
+++ b/exhibition.html
@@ -164,9 +164,8 @@
 
                 <div class="exhibitions">
                     <p class="exhibition-title"><a href="./exhibitions/no-victor-no-vanquished:theworldatthecrossroads">
-                            no
-                            victor,no vanquished:<br>
-                            the world at the crossroads.</a></p>
+                            no victor,no vanquished:<br>
+                            the world at <br> the crossroads.</a></p>
                     <p class="exhibition-venue">iwaya community art biennale,</p>
                     <p class="exhibition-location">lagos,nigeria</p>
                     <hr color="#800020">
